Fix gap at the bottom with wrong background

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -418,6 +418,11 @@ header {
 
 /* CONTACT FORM */
 .contact-me {
+  background-color: var(--h2-color);
+}
+
+
+.contact-me__wrapper {
   position: relative;
   height: 100%;
   width: 100%;
